[package]
name = "pimon"
version = "0.3.0"
authors = ["Connor Holloway <root_pfad@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Pi-Hole terminal monitoring tool"
repository = "https://github.com/Scratchcat1/pimon"
keywords = ["pi-hole", "tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
pi-hole-api = { git = "https://github.com/Lipt0nas/pi-hole-api", version = "0.4.0" }
chrono = "0.4"
serde_json = "1.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
